--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -4,6 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Firdavs Abdurasulov</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-47692315-56"></script>
+    	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-47692315-56');
+	</script>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
     <!-- Google APIs -->
 	<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
