--- a/static/css/default.css
+++ b/static/css/default.css
@@ -441,4 +441,68 @@ h6 { font-size: 16px;}
 }
 
 
+/* Login Page (START) */
 
+	#login-page-wrapper{
+		background: #eaeaea;
+		height: 100vh;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	#login-form-wrapper{
+		width: 400px;
+		background: #fff;
+		padding: 20px;
+		-webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
+		-moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
+		box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
+	}
+
+	@media screen and (max-width: 400px){
+		#login-form-wrapper{
+			width: 95%;
+		}
+	}
+
+
+/* Login Page (END) */
+
+
+@media screen and (max-width: 1200px){
+	.main-container{
+		width: 95%;
+	}
+}
+
+@media screen and (max-width: 800px){
+	.intro-wrapper{
+		grid-template-columns: 1fr;
+		grid-template-areas:
+			'nav-wrapper'
+			'left-column'
+			'right-column'
+		;
+	}
+
+	.right-column{
+		justify-content: center;
+	}
+
+}
+
+@media screen and (max-width: 400px){
+	#preview-shadow{
+		max-width: 280px;
+		height: 180px;
+		padding-left: 10px;
+		padding-top: 10px;
+	}
+
+	#preview{
+		width: 280px;
+
+	}
+
+}
